Hopefully fixed 'a' tag not showing as the right color.

--- a/index.css
+++ b/index.css
@@ -35,7 +35,11 @@ p {
     max-width: 23rem;
 }
 
-a {
+a,
+a:link,
+a:visited,
+a:hover,
+a:active {
     color: aqua;
     text-decoration: none;
 }
